2005-12-16  Gert Driesen <drieseng@users.sourceforge.net>

	* XmlTextWriterTests.cs: No longer derive from deprecated Assertion
	class. Added WriteDocType tests.
	* XmlWriterTests.cs: No longer derive from deprecated Assertion class.

2005-12-15  Konstantin Triger <kostat@mainsoft.com>

	* XmlTextWriterTests.cs: added WriteCDataNull test.

2005-12-14  Atsushi Enomoto <atsushi@ximian.com>

	* XmlDocumentTests.cs : (CreateNodeNodeTypeName) the previous fix was 
	  wrong; ArgumentException is the expected exception (it anyways won't
	  work under MS.NET 2.0).
	* XmlNodeTests.cs : added labels to assertions. another NotDotNet case.
	* XmlAttributeTests.cs : ditto.

2005-12-14  Atsushi Enomoto <atsushi@ximian.com>

	* XmlDocumentTests.cs, XmlAttributeCollectionTests.cs
	  XmlElementTests.cs, XmlCharacterDataTests.cs :
	  Marked NotDotNet for some tests broken under 2.0 (MS bugs).
	  Marked Ignore for some tests which originally does not make sense.
	  Changed types in ExpectedException for some tests under 2.0.

2005-12-12  Atsushi Enomoto <atsushi@ximian.com>

	* XmlAssert.cs : new file.

2005-12-12  Atsushi Enomoto <atsushi@ximian.com>

	* XmlReaderCommonTests.cs : enabled MoveToNextSibling() tests.

2005-12-12  Atsushi Enomoto <atsushi@ximian.com>

	* XmlReaderCommonTests.cs : added several tests for 2.0 methods.

2005-12-09  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTextReaderTests.cs : added test for Encoding property.

2005-12-09  Atsushi Enomoto <atsushi@ximian.com>

	* XmlReaderCommonTests.cs : added tests for ReadToDescendant() and
	  ReadToFollowing().

2005-12-09  Atsushi Enomoto <atsushi@ximian.com>

	* XmlReaderSettingsTests.cs : added some ConformanceLevel tests.
	  Added CreateClonesSettings() to make sure XmlReader.Create() clones
	  XmlReaderSettings.

2005-12-08  Atsushi Enomoto <atsushi@ximian.com>

	* XmlReaderSettingsTests.cs : (DefaultValue)
	  Added assertion label everywhere.
	* XmlWriterTests.cs : WriteNodeError is broken under MS.NET 2.0 (it